# greetify

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
back-end/: Dockerfile  Dockerfile.prod  pyproject.toml
back-end/app/: main.py
back-end/app/api/: api.py
back-end/app/api/endpoints/: greet.py  greet_from_image.py  greet_from_text.py  save_current_location.py  save_current_locattion.py
back-end/app/core/: config.py  middleware.py
back-end/app/core/config/: config.py
back-end/app/core/database/: db.py  locations.db
back-end/app/core/greet/: judge.py
back-end/app/core/greet/image/tools/: greeting_tool.py  location_tool.py  predict_tool.py  weather_tool.py
back-end/app/core/greet/image/workflows/: graph.py  langgraph_tools.py
back-end/app/core/greet/text/tools/: judge_greet_tool.py
back-end/app/core/greet/text/workflows/: graph.py
back-end/app/core/middleware/: middleware.py
back-end/app/core/response/: response.py
front-end/: Dockerfile  index.html  netlify.toml  package-lock.json  package.json  vite.config.ts
front-end/netlify/functions/: api-proxy.cjs  api-proxy.js
front-end/src/: App.module.css  App.tsx  main.tsx
front-end/src/components/: VoiceButton.module.css  VoiceButton.tsx
front-end/src/constants/: messages.ts
front-end/src/context/: LoadingContext.tsx
front-end/src/hooks/: useAnimatedMessages.ts  useAppMount.ts  useLoading.ts  usePost.ts  useSpeechRecognition.ts  useUpload.ts
front-end/src/provider/: LoadingProvider.tsx
front-end/src/styles/: base.css  index.css  (+1 more)
(+20 files in other folders)
